// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPlatformConfig > gets config for platform belgie 1`] = `
{
  "carriers": [
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "BE",
        "NL",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
        "saturday",
      ],
      "features": [
        "deliveryDaysWindow",
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "bpost",
      "packageTypes": [
        "package",
        "mailbox",
      ],
      "pickupCountries": [
        "BE",
        "NL",
      ],
      "shipmentOptions": [
        "only_recipient",
        "signature",
      ],
      "subscription": 0,
    },
    {
      "deliveryCountries": [
        "BE",
        "NL",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [
        "deliveryDaysWindow",
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "postnl",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "BE",
        "NL",
      ],
      "shipmentOptions": [
        "signature",
      ],
      "subscription": 0,
    },
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "AT",
        "BE",
        "BG",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "GR",
        "HU",
        "IE",
        "IT",
        "LV",
        "LI",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "RO",
        "SK",
        "SI",
        "ES",
        "SE",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "dpd",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "AT",
        "BE",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "HU",
        "LV",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "SK",
        "SI",
        "ES",
        "GB",
      ],
      "subscription": 0,
    },
  ],
}
`;

exports[`getPlatformConfig > gets config for platform myparcel 1`] = `
{
  "carriers": [
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "NL",
        "BE",
      ],
      "deliveryTypes": [
        "standard",
        "morning",
        "evening",
        "pickup",
        "monday",
      ],
      "fakeDelivery": true,
      "features": [
        "deliveryDaysWindow",
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "postnl",
      "packageTypes": [
        "package",
        "mailbox",
        "digital_stamp",
        "package_small",
      ],
      "pickupCountries": [
        "NL",
        "BE",
        "DK",
        "SE",
        "DE",
      ],
      "shipmentOptions": [
        "only_recipient",
        "signature",
      ],
      "subscription": -1,
    },
    {
      "addressFields": [
        "city",
        "postalCode",
      ],
      "deliveryCountries": [
        "NL",
        "BE",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
        "same_day",
      ],
      "features": [
        "deliveryDaysWindow",
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "dhlforyou",
      "packageTypes": [
        "package",
        "mailbox",
      ],
      "pickupCountries": [
        "NL",
      ],
      "shipmentOptions": [
        "only_recipient",
        "signature",
      ],
      "subscription": -1,
    },
    {
      "deliveryCountries": [
        "AT",
        "BG",
        "HR",
        "CZ",
        "EE",
        "FI",
        "DE",
        "GR",
        "HU",
        "IE",
        "IT",
        "LV",
        "LT",
        "LU",
        "PL",
        "PT",
        "RO",
        "SK",
        "SI",
        "ES",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [],
      "name": "dhlparcelconnect",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "AT",
        "BG",
        "HR",
        "CZ",
        "DK",
        "FR",
        "DE",
        "GR",
        "HU",
        "IT",
        "LU",
        "PL",
        "PT",
        "RO",
        "SK",
        "SI",
        "ES",
        "SE",
      ],
      "subscription": -1,
    },
    {
      "deliveryCountries": [
        "BE",
        "BG",
        "DK",
        "DE",
        "EE",
        "FI",
        "FR",
        "GR",
        "HU",
        "IE",
        "IT",
        "HR",
        "LV",
        "LT",
        "LU",
        "NL",
        "AT",
        "PL",
        "PT",
        "RO",
        "SI",
        "SK",
        "ES",
        "CZ",
        "SE",
        "GB",
      ],
      "deliveryTypes": [
        "standard",
      ],
      "features": [],
      "name": "dhleuroplus",
      "packageTypes": [
        "package",
      ],
      "subscription": -1,
    },
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "BG",
        "DE",
        "EE",
        "FI",
        "GR",
        "HU",
        "IE",
        "IT",
        "HR",
        "LV",
        "LT",
        "LU",
        "AT",
        "PL",
        "PT",
        "RO",
        "SI",
        "SK",
        "ES",
        "CZ",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "fakeDelivery": true,
      "fakeDeliveryBlacklist": [
        "NL",
      ],
      "name": "ups",
      "packageTypes": [
        "package",
      ],
      "pickupCountries": [
        "DE",
      ],
      "subscription": 1,
      "unsupportedParameters": [
        "package_type",
      ],
    },
    {
      "addressFields": [
        "postalCode",
        "street",
        "city",
      ],
      "deliveryCountries": [
        "AT",
        "BE",
        "BG",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "GR",
        "HU",
        "IE",
        "IT",
        "LV",
        "LI",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "RO",
        "SK",
        "SI",
        "ES",
        "SE",
      ],
      "deliveryTypes": [
        "standard",
        "pickup",
      ],
      "features": [
        "dropOffDays",
        "dropOffDelay",
      ],
      "name": "dpd",
      "packageTypes": [
        "package",
        "mailbox",
      ],
      "pickupCountries": [
        "AT",
        "BE",
        "CZ",
        "DK",
        "EE",
        "FI",
        "FR",
        "DE",
        "HU",
        "LV",
        "LT",
        "LU",
        "NL",
        "PL",
        "PT",
        "SK",
        "SI",
        "ES",
        "GB",
      ],
      "subscription": 1,
    },
  ],
}
`;
